Fix blurred cache indicator

--- a/site/style.css
+++ b/site/style.css
@@ -26,6 +26,7 @@ body {
 #cached {
   font-size: 0.5rem;
   position: absolute;
+  z-index: 2;
 }
 #top {
   background-color: var(--color-button-bg);
@@ -93,7 +94,7 @@ button {
   background-color: rgb(from var(--color-bg) r g b / 0.8);
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 1;
 }
 
 /* SELECTS */
@@ -207,7 +208,7 @@ span.select2-container--default
     550ms ease-in-out 3.5s 1 reverse forwards pop;
   display: block;
   position: fixed;
-  z-index: 5;
+  z-index: 3;
 }
 .header > .title {
   margin-top: 0.5em;
